--- a/experiment/mcq.ipynb
+++ b/experiment/mcq.ipynb
@@ -2,6 +2,476 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import traceback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sk-proj-IQx3Y76LTQNPkDQ02Rr2T3BlbkFJQURlIHucHci8d4yYOhYS\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "KEY = os.getenv('OPENAI_API_KEY')\n",
+    "print(KEY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\vedan\\OneDrive\\Desktop\\mcqgen\\env\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:119: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.2.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import ChatOpenAI`.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
+   "source": [
+    "llm = ChatOpenAI(openai_api_key=KEY,\n",
+    "                 model_name='gpt-3.5-turbo',\n",
+    "                 temperature=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.llms import OpenAI\n",
+    "#from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.callbacks import get_openai_callback\n",
+    "import PyPDF2\n",
+    "from langchain.chains import SequentialChain\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RESPONSE_JSON = {\n",
+    "    \"1\": {\n",
+    "        \"mcq\": \"multiple choice question\",\n",
+    "        \"options\": {\n",
+    "            \"a\": \"choice here\",\n",
+    "            \"b\": \"choice here\",\n",
+    "            \"c\": \"choice here\",\n",
+    "            \"d\": \"choice here\",\n",
+    "        },\n",
+    "        \"correct\": \"correct answer\",\n",
+    "    },\n",
+    "    \"2\": {\n",
+    "        \"mcq\": \"multiple choice question\",\n",
+    "        \"options\": {\n",
+    "            \"a\": \"choice here\",\n",
+    "            \"b\": \"choice here\",\n",
+    "            \"c\": \"choice here\",\n",
+    "            \"d\": \"choice here\",\n",
+    "        },\n",
+    "        \"correct\": \"correct answer\",\n",
+    "    },\n",
+    "    \"3\": {\n",
+    "        \"mcq\": \"multiple choice question\",\n",
+    "        \"options\": {\n",
+    "            \"a\": \"choice here\",\n",
+    "            \"b\": \"choice here\",\n",
+    "            \"c\": \"choice here\",\n",
+    "            \"d\": \"choice here\",\n",
+    "        },\n",
+    "        \"correct\": \"correct answer\",\n",
+    "    },\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEMPLATE = \"\"\"\n",
+    "Text:{text}\n",
+    "You are an expert MCQ maker. Given the above text, it is your job to \\\n",
+    "create a quiz  of {number} multiple choice questions for {subject} students in {tone} tone. \n",
+    "Make sure the questions are not repeated and check all the questions to be conforming the text as well.\n",
+    "Make sure to format your response like  RESPONSE_JSON below  and use it as a guide. \\\n",
+    "Ensure to make {number} MCQs\n",
+    "### RESPONSE_JSON\n",
+    "{response_json}\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quiz_gen_prompt = PromptTemplate(\n",
+    "    input_variables=['text','number','subject','tone','response_json'],\n",
+    "    template = TEMPLATE\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quiz_chain = LLMChain(llm=llm,prompt=quiz_gen_prompt,\n",
+    "                      output_key='quiz',verbose=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEMPLATE2=\"\"\"\n",
+    "You are an expert english grammarian and writer. Given a Multiple Choice Quiz for {subject} students.\\\n",
+    "You need to evaluate the complexity of the question and give a complete analysis of the quiz. Only use at max 50 words for complexity analysis. \n",
+    "if the quiz is not at per with the cognitive and analytical abilities of the students,\\\n",
+    "update the quiz questions which needs to be changed and change the tone such that it perfectly fits the student abilities\n",
+    "Quiz_MCQs:\n",
+    "{quiz}\n",
+    "\n",
+    "Check from an expert English Writer of the above quiz:\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quiz_eval_prompt=PromptTemplate(\n",
+    "    input_variables=['subject','quiz'],\n",
+    "    template = TEMPLATE2)\n",
+    "\n",
+    "review_chain = LLMChain(llm=llm,prompt=quiz_eval_prompt,\n",
+    "                        output_key='review',verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_eval_chain=SequentialChain(chains=[quiz_chain, review_chain], input_variables=[\"text\", \"number\", \"subject\", \"tone\", \"response_json\"],\n",
+    "                                        output_variables=[\"quiz\", \"review\"], verbose=True,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path=\"C:\\\\Users\\\\vedan\\\\OneDrive\\\\Desktop\\\\mcqgen\\\\data.txt\"\n",
+    "with open(file_path,'r') as file:\n",
+    "    TEXT = file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Serialize python dictionary to json format\n",
+    "json.dumps(RESPONSE_JSON)\n",
+    "NUMBER=5 \n",
+    "SUBJECT=\"machine learning\"\n",
+    "TONE=\"simple\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\vedan\\OneDrive\\Desktop\\mcqgen\\env\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:119: LangChainDeprecationWarning: The method `Chain.__call__` was deprecated in langchain 0.1.0 and will be removed in 0.2.0. Use invoke instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SequentialChain chain...\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "Text:The term machine learning was coined in 1959 by Arthur Samuel, an IBM employee and pioneer in the field of computer gaming and artificial intelligence.[9][10] The synonym self-teaching computers was also used in this time period.[11][12]\n",
+      "\n",
+      "Although the earliest machine learning model was introduced in the 1950s when Arthur Samuel invented a program that calculated the winning chance in checkers for each side, the history of machine learning roots back to decades of human desire and effort to study human cognitive processes.[13] In 1949, Canadian psychologist Donald Hebb published the book The Organization of Behavior, in which he introduced a theoretical neural structure formed by certain interactions among nerve cells.[14] Hebb's model of neurons interacting with one another set a groundwork for how AIs and machine learning algorithms work under nodes, or artificial neurons used by computers to communicate data.[13] Other researchers who have studied human cognitive systems contributed to the modern machine learning technologies as well, including logician Walter Pitts and Warren McCulloch, who proposed the early mathematical models of neural networks to come up with algorithms that mirror human thought processes.[13]\n",
+      "\n",
+      "By the early 1960s an experimental \"learning machine\" with punched tape memory, called Cybertron, had been developed by Raytheon Company to analyze sonar signals, electrocardiograms, and speech patterns using rudimentary reinforcement learning. It was repetitively \"trained\" by a human operator/teacher to recognize patterns and equipped with a \"goof\" button to cause it to re-evaluate incorrect decisions.[15] A representative book on research into machine learning during the 1960s was Nilsson's book on Learning Machines, dealing mostly with machine learning for pattern classification.[16] Interest related to pattern recognition continued into the 1970s, as described by Duda and Hart in 1973.[17] In 1981 a report was given on using teaching strategies so that an artificial neural network learns to recognize 40 characters (26 letters, 10 digits, and 4 special symbols) from a computer terminal.[18]\n",
+      "\n",
+      "Tom M. Mitchell provided a widely quoted, more formal definition of the algorithms studied in the machine learning field: \"A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P if its performance at tasks in T, as measured by P, improves with experience E.\"[19] This definition of the tasks in which machine learning is concerned offers a fundamentally operational definition rather than defining the field in cognitive terms. This follows Alan Turing's proposal in his paper \"Computing Machinery and Intelligence\", in which the question \"Can machines think?\" is replaced with the question \"Can machines do what we (as thinking entities) can do?\".[20]\n",
+      "\n",
+      "Modern-day machine learning has two objectives. One is to classify data based on models which have been developed; the other purpose is to make predictions for future outcomes based on these models. A hypothetical algorithm specific to classifying data may use computer vision of moles coupled with supervised learning in order to train it to classify the cancerous moles. A machine learning algorithm for stock trading may inform the trader of future potential predictions.[21]\n",
+      "You are an expert MCQ maker. Given the above text, it is your job to create a quiz  of 5 multiple choice questions for machine learning students in simple tone. \n",
+      "Make sure the questions are not repeated and check all the questions to be conforming the text as well.\n",
+      "Make sure to format your response like  RESPONSE_JSON below  and use it as a guide. Ensure to make 5 MCQs\n",
+      "### RESPONSE_JSON\n",
+      "{\"1\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}, \"2\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}, \"3\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}}\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "You are an expert english grammarian and writer. Given a Multiple Choice Quiz for machine learning students.You need to evaluate the complexity of the question and give a complete analysis of the quiz. Only use at max 50 words for complexity analysis. \n",
+      "if the quiz is not at per with the cognitive and analytical abilities of the students,update the quiz questions which needs to be changed and change the tone such that it perfectly fits the student abilities\n",
+      "Quiz_MCQs:\n",
+      "{\n",
+      "    \"1\": {\n",
+      "        \"mcq\": \"Who coined the term machine learning in 1959?\",\n",
+      "        \"options\": {\n",
+      "            \"a\": \"Donald Hebb\",\n",
+      "            \"b\": \"Tom M. Mitchell\",\n",
+      "            \"c\": \"Arthur Samuel\",\n",
+      "            \"d\": \"Walter Pitts\"\n",
+      "        },\n",
+      "        \"correct\": \"c\"\n",
+      "    },\n",
+      "    \"2\": {\n",
+      "        \"mcq\": \"What was the name of the experimental 'learning machine' developed by Raytheon Company in the early 1960s?\",\n",
+      "        \"options\": {\n",
+      "            \"a\": \"Cyberdyne\",\n",
+      "            \"b\": \"Cybernet\",\n",
+      "            \"c\": \"Cybertron\",\n",
+      "            \"d\": \"Cyberlink\"\n",
+      "        },\n",
+      "        \"correct\": \"c\"\n",
+      "    },\n",
+      "    \"3\": {\n",
+      "        \"mcq\": \"Who proposed the early mathematical models of neural networks to come up with algorithms that mirror human thought processes?\",\n",
+      "        \"options\": {\n",
+      "            \"a\": \"Warren McCulloch\",\n",
+      "            \"b\": \"Tom M. Mitchell\",\n",
+      "            \"c\": \"Ray Kurzweil\",\n",
+      "            \"d\": \"Alan Turing\"\n",
+      "        },\n",
+      "        \"correct\": \"a\"\n",
+      "    },\n",
+      "    \"4\": {\n",
+      "        \"mcq\": \"According to Tom M. Mitchell, what is the definition of the algorithms studied in the machine learning field?\",\n",
+      "        \"options\": {\n",
+      "            \"a\": \"A computer program learns from experience and improves performance\",\n",
+      "            \"b\": \"A computer program learns from textbooks and improves knowledge\",\n",
+      "            \"c\": \"A computer program learns from movies and improves entertainment\",\n",
+      "            \"d\": \"A computer program learns from mistakes and improves accuracy\"\n",
+      "        },\n",
+      "        \"correct\": \"a\"\n",
+      "    },\n",
+      "    \"5\": {\n",
+      "        \"mcq\": \"What are the two objectives of modern-day machine learning?\",\n",
+      "        \"options\": {\n",
+      "            \"a\": \"To confuse data and make random predictions\",\n",
+      "            \"b\": \"To classify data and make predictions for future outcomes\",\n",
+      "            \"c\": \"To hide data and prevent predictions\",\n",
+      "            \"d\": \"To ignore data and avoid predictions\"\n",
+      "        },\n",
+      "        \"correct\": \"b\"\n",
+      "    }\n",
+      "}\n",
+      "\n",
+      "Check from an expert English Writer of the above quiz:\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "#https://python.langchain.com/docs/modules/model_io/llms/token_usage_tracking\n",
+    "\n",
+    "#How to setup Token Usage Tracking in LangChain\n",
+    "with get_openai_callback() as cb:\n",
+    "    response=gen_eval_chain(\n",
+    "        {\n",
+    "            \"text\": TEXT,\n",
+    "            \"number\": NUMBER,\n",
+    "            \"subject\":SUBJECT,\n",
+    "            \"tone\": TONE,\n",
+    "            \"response_json\": json.dumps(RESPONSE_JSON)\n",
+    "        }\n",
+    "        )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Tokens:1971\n",
+      "Prompt Tokens:1458\n",
+      "Completion Tokens:513\n",
+      "Total Cost:0.0032130000000000006\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Total Tokens:{cb.total_tokens}\")\n",
+    "print(f\"Prompt Tokens:{cb.prompt_tokens}\")\n",
+    "print(f\"Completion Tokens:{cb.completion_tokens}\")\n",
+    "print(f\"Total Cost:{cb.total_cost}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quiz = response.get('quiz')\n",
+    "quiz = json.loads(quiz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quiz_table_data = []\n",
+    "for key, value in quiz.items():\n",
+    "    mcq = value[\"mcq\"]\n",
+    "    options = \" | \".join(\n",
+    "        [\n",
+    "            f\"{option}: {option_value}\"\n",
+    "            for option, option_value in value[\"options\"].items()\n",
+    "            ]\n",
+    "        )\n",
+    "    correct = value[\"correct\"]\n",
+    "    quiz_table_data.append({\"MCQ\": mcq, \"Choices\": options, \"Correct\": correct})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quiz = pd.DataFrame(quiz_table_data).to_csv('machine_learning.csv',\n",
+    "                                            index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,8 +479,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
